[package]
name = "wolfen"
version = "0.1.0"
authors = ["manoloesparta <manoloesparta@gmail.com>"]
edition = "2018"

[[bin]]
name = "wolfen"

[dependencies]
piston = "0.49.0"
piston_window = "0.108.0"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.72.0"